github-webhooks/base/github-eventsource.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: github-eventsource
spec:
  rules:
    - host: eventsource-8ac5e173.nip.io
      http:
        paths:
          - backend:
              service:
                name: github-eventsource-svc
                port:
                  number: 12000
            path: /push
            pathType: Prefix
  tls:
    - hosts:
        - eventsource-8ac5e173.nip.io
      secretName: github-eventsource-cert
